libproxy/TODO
breaks qt5-qtbase

In file included from ../../include/QtCore/qobjectdefs.h:1,
                 from ../../include/QtCore/../../src/corelib/kernel/qobject.h:46,
                 from ../../include/QtCore/qobject.h:1,
                 from ../../include/QtCore/../../src/corelib/io/qiodevice.h:45,
                 from ../../include/QtCore/qiodevice.h:1,
                 from ../../include/QtNetwork/../../src/network/socket/qabstractsocket.h:44,
                 from ../../include/QtNetwork/qabstractsocket.h:1,
                 from ../../include/QtNetwork/../../src/network/kernel/qhostaddress.h:48,
                 from ../../include/QtNetwork/qhostaddress.h:1,
                 from kernel/qnetworkproxy.h:44,
                 from kernel/qnetworkproxy_libproxy.cpp:41:
../../include/QtCore/../../src/corelib/kernel/qobjectdefs.h:93:20: error: expected unqualified-id before 'public'
   93 | # define Q_SIGNALS public QT_ANNOTATE_ACCESS_SPECIFIER(qt_signal)
      |                    ^~~~~~
../../include/QtCore/../../src/corelib/kernel/qobjectdefs.h:89:22: note: in expansion of macro 'Q_SIGNALS'
   89 | #     define signals Q_SIGNALS
      |                      ^~~~~~~~~
/scratch/x11/qt5-qtbase/work/.buildlink/include/glib-2.0/gio/gdbusintrospection.h:157:25: note: in expansion of macro 'signals'
  157 |   GDBusSignalInfo     **signals;
      |                         ^~~~~~~

and qt6-qtbase:
In file included from /scratch/x11/qt6-qtbase/work/qtbase-everywhere-src-6.5.0/include/QtCore/qtmetamacros.h:1,
                 from /scratch/x11/qt6-qtbase/work/qtbase-everywhere-src-6.5.0/include/QtCore/../../src/corelib/global/qnamespace.h:13,
                 from /scratch/x11/qt6-qtbase/work/qtbase-everywhere-src-6.5.0/include/QtCore/qnamespace.h:1,
                 from /scratch/x11/qt6-qtbase/work/qtbase-everywhere-src-6.5.0/include/QtCore/../../src/corelib/text/qbytearray.h:9,
                 from /scratch/x11/qt6-qtbase/work/qtbase-everywhere-src-6.5.0/include/QtCore/qbytearray.h:1,
                 from /scratch/x11/qt6-qtbase/work/qtbase-everywhere-src-6.5.0/include/QtCore/../../src/corelib/text/qstringview.h:8,
                 from /scratch/x11/qt6-qtbase/work/qtbase-everywhere-src-6.5.0/include/QtCore/qstringview.h:1,
                 from /scratch/x11/qt6-qtbase/work/qtbase-everywhere-src-6.5.0/include/QtCore/../../src/corelib/text/qchar.h:656,
                 from /scratch/x11/qt6-qtbase/work/qtbase-everywhere-src-6.5.0/include/QtCore/qchar.h:1,
                 from /scratch/x11/qt6-qtbase/work/qtbase-everywhere-src-6.5.0/include/QtCore/../../src/corelib/text/qstring.h:14,
                 from /scratch/x11/qt6-qtbase/work/qtbase-everywhere-src-6.5.0/include/QtCore/qstring.h:1,
                 from /scratch/x11/qt6-qtbase/work/qtbase-everywhere-src-6.5.0/include/QtNetwork/../../src/network/kernel/qhostaddress.h:10,
                 from /scratch/x11/qt6-qtbase/work/qtbase-everywhere-src-6.5.0/include/QtNetwork/qhostaddress.h:1,
                 from /scratch/x11/qt6-qtbase/work/qtbase-everywhere-src-6.5.0/src/network/kernel/qnetworkproxy.h:8,
                 from /scratch/x11/qt6-qtbase/work/qtbase-everywhere-src-6.5.0/src/network/kernel/qnetworkproxy_libproxy.cpp:5:
/scratch/x11/qt6-qtbase/work/qtbase-everywhere-src-6.5.0/include/QtCore/../../src/corelib/kernel/qtmetamacros.h:45:20: error: expected unqualified-id before 'public'
   45 | # define Q_SIGNALS public QT_ANNOTATE_ACCESS_SPECIFIER(qt_signal)
      |                    ^~~~~~


https://github.com/libproxy/libproxy/issues/226
